	-*- Indented-text -*-
	$Id$

1.25  201X-XX-XX
	- fix to call rl_initialize() after I/O stream
	  setting. [rt.cpan.org #96569]
	- t/readline.t: comment-out stty-command calls. 
	- t/history.t, t/readline.t: print out the corresponding
          section names in the manuals of the libraries.
	- eg/perlsh: use 'IO' instead of 'FILEHANDLE' which Perl 5.20
	  warns. [rt.cpan.org #100883]

1.24  2014-03-23
	- fix not to make the PerlIO layer empty for Perl 5.8.9 or
          before. [rt.cpan.org #59832]
	- update Pod document assuming the use of Pod::Simple::HTMLBatch.
	- t/00checkver.t: not to use 'display-readline-version') and "use
	  Test;"
	- INSTALL: add "(Install) Using Package" section.

1.23  2014-03-20
	- add description of the pager command bug in Perl debugger
	  which causes segementation fault [rt.perl.org #121456]
	- fix not to clobber binmode layer (utf-8) on filehandles [rt.cpan.org #59832]
	- support UTF-8 input as compatible with Term::ReadLine
	  - Now Term::ReadLine::Gnu requires perl 5.8.0 or above
	- define Term::ReadLine::Gnu::ornaments method [rt.cpan.org #93614]
	- Makefile.PL: Fix the URL of the bug-tracker [rt.cpan.org #93680]
	- eg/perlsh: POD syntax fix. [rt.cpan.org #93895]
	- README: add note for bug-tracker
	- INSTALL: update "1.3 Trouble Shooting"

1.22  2014-03-05
	- make Kwalitee <http://cpants.cpanauthors.org/> friendly
	  - add MakeMaker options for META.yml
	  - add Changelog
	  - fix POD errors
	  - make .pm versions consistent
	  - use "use warnings"
	- Makefile.PL dies on the CPAN Test for OpenBSD temporarily
          (hopefully).

1.21  2014-03-02
	- readline-6.3 support (Gnu Readline Library 6.3 requires this
	  release or newers.)
	    new function
		rl_clear_history
	    new variable
		rl_signal_event_hook
		rl_input_available_hook
		rl_executing_key
		rl_executing_keyseq
		rl_key_sequence_length
		rl_change_environment
		rl_filename_stat_hook
	- readline-6.1 support
	    new function
		rl_free_keymap (enabled)