@@ -3,7 +3,7 @@ $Id$
 
 Term::ReadLine::Gnu --- GNU Readline Library Wrapper Module
 
-	Copyright (c) 2014 Hiroo Hayashi.  All rights reserved.
+	Copyright (c) 1996 Hiroo Hayashi.  All rights reserved.
 
 	This program is free software; you can redistribute it and/or
 	modify it under the same terms as Perl itself.
