@@ -2,7 +2,7 @@
 #
 #	$Id$	
 #
-#	Copyright (c) 2014 Hiroo Hayashi. All Rights Reserved.
+#	Copyright (c) 1996 Hiroo Hayashi. All Rights Reserved.
 #
 #	This program is free software; you can redistribute it and/or
 #	modify it under the same terms as Perl itself.
